# Computer-Graphics-I-Theoretical-Assignment-1

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openglview.cpp  openglview.h  trianglemesh.cpp  trianglemesh.h  uebung_01.sln  uebung_01.vcxproj  uebung_01.vcxproj.filters  vec3.h
.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
Modelle/: 83ford-gt90.lsa  ballon.lsa  brach.lsa  delphin.lsa
uebung_01_autogen/: mocs_compilation_Debug.cpp
uebung_01_autogen/include_Debug/: ui_mainwindow.h
uebung_01_autogen/include_Debug/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_openglview.cpp  moc_openglview.cpp.d
